[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/knife.png" type="Texture" id=1]
[ext_resource path="res://src/items/scenes/Slasher.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/Stab_Punch_Hit_136.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/slash.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=2]
radius = 28.9998
height = 118.0

[node name="Slasher" type="Node2D"]
show_behind_parent = true
script = ExtResource( 2 )

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -23 )
stream = ExtResource( 3 )
volume_db = -3.0

[node name="KnifeSprite" type="Node2D" parent="."]

[node name="Knife" type="Sprite" parent="KnifeSprite"]
position = Vector2( 17, -30 )
rotation = 1.0472
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
offset = Vector2( 0, -40 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -23 )
scale = Vector2( 0.001, 0.001 )

[node name="Sprite" type="Sprite" parent="Area2D"]
modulate = Color( 0.705882, 0.945098, 1, 0.490196 )
position = Vector2( 89, 0 )
scale = Vector2( 1.2, 1.4 )
texture = ExtResource( 4 )

[node name="Shape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 90, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="TweenSlash" type="Tween" parent="."]

[node name="TimerSlash" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="tween_all_completed" from="TweenSlash" to="." method="_on_TweenSlash_tween_all_completed"]
[connection signal="timeout" from="TimerSlash" to="." method="_on_TimerSlash_timeout"]
